--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --fix",
     "preview": "vite preview",
     "format": "prettier --write .",
-    "prepare": "husky",
+    "prepare": "if [ \"$NODE_ENV\" != \"production\" ]; then husky; fi",
     "lint-staged": "lint-staged",
     "test": "vitest run --coverage",
     "test:watch": "vitest watch",
@@ -35,6 +35,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@tailwindcss/vite": "^4.1.11",
     "@types/lodash.debounce": "^4.0.9",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lodash.debounce": "^4.0.8",
