ci: stop sonarqube scanning shadcn/ui components

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,5 +15,6 @@ sonar.sources = src/
 sonar.inclusions = src/**/*
 
 # Exclude everything else
-sonar.exclusions = **/*
+# Shadcn UI
+sonar.exclusions = src/components/ui/**
 sonar.exclusions.override = src/**/*
