ci: modify sonarqube scan folders, files and ignore list

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,12 +9,11 @@ sonar.organization=john-data-chen
 #sonar.sourceEncoding=UTF-8
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources = src/
+sonar.sources = .
 
 # Include only files in src directory
 sonar.inclusions = src/**/*
 
 # Exclude everything else
-# Shadcn UI
-sonar.exclusions = src/components/ui/**
-sonar.exclusions.override = src/**/*
+# Don't scan Shadcn UI components, tests, tailwindcss, playwright.config.ts
+sonar.exclusions = src/components/ui/**, __tests__/**, src/global.css, ./playwright.config.ts
