ci: disable coverage test

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,3 +17,6 @@ sonar.inclusions = src/**/*
 # Exclude everything else
 # Don't scan Shadcn UI components, tests, tailwindcss, playwright.config.ts
 sonar.exclusions = src/components/ui/**, __tests__/**, src/global.css, ./playwright.config.ts
+
+# coverage
+sonar.coverage.exclusions = src/**/*
