--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "uuid": "^11.1.0",
     "zod": "^3.25.76",
     "zustand": "^5.0.6"
   },
@@ -60,6 +61,7 @@
     "@types/node": "^24.0.10",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "@vitest/coverage-v8": "3.2.4",
     "eslint": "^9.30.1",
