--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
     "@tailwindcss/vite": "^4.1.11",
     "@types/lodash.debounce": "^4.0.9",
     "@vercel/analytics": "^1.5.0",
