--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     ]
   },
   "engines": {
-    "node": "==22.x"
+    "node": "22.x",
+    "pnpm": "10.x"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -51,19 +52,19 @@
     "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
-    "@playwright/test": "^1.53.2",
+    "@eslint/js": "^9.31.0",
+    "@playwright/test": "^1.54.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/node": "^24.0.12",
+    "@types/node": "^24.0.15",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react-swc": "^3.10.2",
+    "@vitejs/plugin-react-swc": "^3.11.0",
     "@vitest/coverage-v8": "3.2.4",
-    "eslint": "^9.30.1",
-    "eslint-config-prettier": "^10.1.5",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
@@ -74,8 +75,8 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tw-animate-css": "^1.3.5",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.36.0",
-    "vite": "^7.0.3",
+    "typescript-eslint": "^8.37.0",
+    "vite": "^7.0.5",
     "vitest": "^3.2.4"
   }
 }
